# lsj_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  flake.nix  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs  query.rs
cli/wix/: License.rtf  main.wxs
db_builder/: Cargo.toml
db_builder/src/: main.rs
src/: main.rs
src/error/: mod.rs
src/parser/: mod.rs
tei_parser/: Cargo.toml
tei_parser/src/: lib.rs
tei_parser/src/parser/: mod.rs
