[package]
name = "lsj-rs"
version = "0.2.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
description = "A rust CLI for querying the LSJ"
license = "MIT"
repository = "https://github.com/caiogeraldes/lsj-rs"
readme = "README.md"
include = ["../assets/db"]

[dependencies]
betacode = "1.2.0"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tei-parser = { version = "0.2.0", path = "../tei_parser" }
include_assets = "1.0.0"
