[package]
name = "db_builder"
version = "0.1.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
description = "A rust script for generating a queriable DB from the LogeionLSJ"
license = "MIT"
repository = "https://github.com/caiogeraldes/lsj-rs"
readme = "README.md"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tei-parser = { version = "0.1.0", path = "../tei_parser" }
