[package]
name = "tei-parser"
version = "0.2.0"
edition = "2024"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
description = "A rust lib for parsing the Logeion LSJ"
license = "MIT"
repository = "https://github.com/caiogeraldes/lsj-rs"
readme = "README.md"

[dependencies]
betacode = "1.2.0"
log = "0.4.29"
quick-xml = { version = "0.38.4", features = ["serde"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
